// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Live Radio A11y I can see the skip to content link 1`] = `"Simbira ku birimwo"`;

exports[`AMP Live Radio AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Live Radio AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Live Radio Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=40&p=gahuza.bbc_gahuza_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_gahuza_radio]&x2=[amp]&x3=[news-gahuza]&x4=[rw]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[Radio%2520BBC%2520Gahuza%2520-%2520BBC%2520News%2520Gahuza]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Live Radio Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "player-live",
    "domain": "test.bbc.co.uk",
    "sections": "Gahuza, Gahuza - Radio",
    "title": "Radio BBC Gahuza - BBC News Gahuza",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Live Radio Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Gahuza",
  "url": "/gahuza",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 2`] = `
{
  "text": "Igituma ushobora kwizera BBC News",
  "url": "https://www.bbc.com/gahuza/institutional-49283343",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 3`] = `
{
  "text": "Ingingo zo gukoresha urubuga",
  "url": "https://www.bbc.com/gahuza/institutional-35754053",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 4`] = `
{
  "text": "Ibijanye na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754055",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 5`] = `
{
  "text": "Ibigenga n'ubuzima bwite",
  "url": "https://www.bbc.com/gahuza/institutional-35754059",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 7`] = `
{
  "text": "Vugana na BBC",
  "url": "https://www.bbc.co.uk/gahuza/send/u50853291",
}
`;

exports[`AMP Live Radio Footer Anchors should match text and url 8`] = `
{
  "text": "Soma ibijanye n'aho duhagaze ku mihora ijana ahandi",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Live Radio Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Live Radio Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gahuza"`;

exports[`AMP Live Radio Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC ntibazwa ibivuye ku zindi mbuga. Soma ibijanye n'aho duhagaze ku mihora ijana ahandi"`;

exports[`AMP Live Radio Header I can see the branding 1`] = `"BBC News, Gahuza"`;

exports[`AMP Live Radio Header Navigation link should match text and url 1`] = `
{
  "text": "Urupapuro rw'itangiriro",
  "url": "/gahuza",
}
`;

exports[`AMP Live Radio Header Navigation link should match text and url 2`] = `
{
  "text": "Ibiyaga binini",
  "url": "/gahuza/topics/c06gq67y3w5t",
}
`;

exports[`AMP Live Radio Header Navigation link should match text and url 3`] = `
{
  "text": "Afrika",
  "url": "/gahuza/topics/crvnv566zx9t",
}
`;

exports[`AMP Live Radio Header Navigation link should match text and url 4`] = `
{
  "text": "Mpuzamahanga",
  "url": "/gahuza/topics/c9dvd93jjkkt",
}
`;

exports[`AMP Live Radio Header Navigation link should match text and url 5`] = `
{
  "text": "Imikino",
  "url": "/gahuza/topics/c5qvpq0jzy7t",
}
`;

exports[`AMP Live Radio Header Navigation link should match text and url 6`] = `
{
  "text": "Amajwi n’amashusho",
  "url": "/gahuza/topics/crldzm936jmt",
}
`;

exports[`AMP Live Radio Main heading should match text 1`] = `"Radio BBC Gahuza"`;

exports[`AMP Live Radio Media Player a11y assistive technology can read the media player title 1`] = `"Kina amajwi"`;

exports[`AMP Live Radio Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_gahuza_radio/liveradio/rw/amp?morph_env=live"`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-72x72.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-96x96.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-128x128.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-144x144.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-152x152.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-180x180.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-384x384.png",
}
`;

exports[`AMP Live Radio SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-512x512.png",
}
`;

exports[`AMP Live Radio SEO Canonical link 1`] = `"http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio"`;

exports[`AMP Live Radio SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Live Radio SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Live Radio SEO Heading level 1 1`] = `"Radio BBC Gahuza"`;

exports[`AMP Live Radio SEO Lang attribute 1`] = `"rw"`;

exports[`AMP Live Radio SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "rw",
        "name": "Kinyarwanda",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio",
        "@type": "WebPage",
        "name": "Radio BBC Gahuza",
      },
      "url": "http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio",
    },
  ],
}
`;

exports[`AMP Live Radio SEO OG description 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;

exports[`AMP Live Radio SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png"`;

exports[`AMP Live Radio SEO OG image alt 1`] = `"BBC News Gahuza"`;

exports[`AMP Live Radio SEO OG locale 1`] = `"rw-RW"`;

exports[`AMP Live Radio SEO OG site name 1`] = `"BBC News Gahuza"`;

exports[`AMP Live Radio SEO OG title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`AMP Live Radio SEO OG type 1`] = `"website"`;

exports[`AMP Live Radio SEO OG url 1`] = `"http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio"`;

exports[`AMP Live Radio SEO Page title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`AMP Live Radio SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Live Radio SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Live Radio SEO Twitter creator 1`] = `"@bbcgahuza"`;

exports[`AMP Live Radio SEO Twitter description 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;

exports[`AMP Live Radio SEO Twitter image alt 1`] = `"BBC News Gahuza"`;

exports[`AMP Live Radio SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png"`;

exports[`AMP Live Radio SEO Twitter site 1`] = `"@bbcgahuza"`;

exports[`AMP Live Radio SEO Twitter title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`AMP Live Radio Summary should match text 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;
